--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,17 @@
     "private": true,
     "version": "0.0.0",
     "scripts": {
-      "start": "nodemon app.js"
+        "start": "nodemon app.js"
     },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1",
-    "nodemon": "^3.1.9"
-  }
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.13.1",
+        "mongoose": "^8.10.1",
+        "nodemailer": "^6.10.0",
+        "nodemon": "^3.1.9"
+    }
 }
