--- a/client/property_sell/package.json
+++ b/client/property_sell/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.8.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-otp-input": "^3.1.1",
     "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.8"
   },
