password checklist package implemented

--- a/client/property_sell/package.json
+++ b/client/property_sell/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-otp-input": "^3.1.1",
+    "react-password-checklist": "^1.8.1",
     "react-router-dom": "^7.2.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
