--- a/client/property_sell/package.json
+++ b/client/property_sell/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.4.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-confirm": "^0.3.0",
     "react-dom": "^19.0.0",
     "react-otp-input": "^3.1.1",
     "react-password-checklist": "^1.8.1",
