--- a/client/property_sell/package.json
+++ b/client/property_sell/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.1",
     "firebase": "^11.4.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-confirm": "^0.3.0",
