--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
-        "cloudinary": "^2.6.0",
+        "cloudinary": "^1.32.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
@@ -15,6 +15,7 @@
         "mongodb": "^6.13.1",
         "mongoose": "^8.10.1",
         "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.10.0",
         "nodemon": "^3.1.9"
     }
