--- a/client/property_sell/package.json
+++ b/client/property_sell/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
-    "antd": "^5.24.3",
     "axios": "^1.8.1",
     "firebase": "^11.4.0",
     "lucide-react": "^0.475.0",
@@ -24,6 +23,7 @@
     "react-router-dom": "^7.2.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
