--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "http": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.13.1",
         "mongoose": "^8.10.1",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.10.0",
-        "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9",
+        "socket.io": "^4.8.1"
     }
 }
