--- a/client/property_sell/package.json
+++ b/client/property_sell/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.1",
     "firebase": "^11.4.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-confirm": "^0.3.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
